--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ body {
 .hero {
   height: 85vh;
   /* Para trocar a imagem, substitua o link dentro de url('...') abaixo pelo caminho da sua foto */
-  background: url('https://images.unsplash.com/photo-1545324418-cc1a3fa10c00?ixlib=rb-4.0.3&auto=format&fit=crop&w=1920&q=80') center/cover no-repeat;
+  background: url(img/foto-condominio.jpg.png) center/cover no-repeat;
   position: relative;
   display: flex;
   align-items: center;
